--- a/snapshot/chameleon-service.html
+++ b/snapshot/chameleon-service.html
@@ -8,7 +8,7 @@
 
 	<head>
 		<meta charset="UTF-8" />
-		<title>Project Plugin Management | OW2 Chameleon - Core</title>
+		<title>Run Chameleon as system service | OW2 Chameleon - Core</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
@@ -35,7 +35,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"/>
 	</head>
 
-	<body class="page-plugin-management project-chameleon-core" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
+	<body class="page-chameleon-service project-chameleon-core" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
 
 		<div class="navbar navbar-fixed-top navbar-inverse">
 			<div class="navbar-inner">
@@ -49,7 +49,7 @@
 					<div class="nav-collapse">
 						<ul class="nav pull-right">
 							<li><a href="downloads.html" title="Download">Download </a></li>
-							<li class="dropdown">
+							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a href="chameleon-structure.html" title="Structure">Structure </a></li>
@@ -58,7 +58,7 @@
 									<li><a href="chameleon-vm-args.html" title="JVM Arguments">JVM Arguments </a></li>
 									<li><a href="chameleon-writing-your-own-deployer.html" title="Extend Deployment">Extend Deployment </a></li>
 									<li><a href="chameleon-package.html" title="Package your Chameleon">Package your Chameleon </a></li>
-									<li><a href="chameleon-service.html" title="Run as service">Run as service </a></li>
+									<li class="active"><a href="" title="Run as service">Run as service </a></li>
 									<li><a href="apidocs/index.html" title="API">API </a></li>
 								</ul>
 							</li>
@@ -87,43 +87,137 @@
 	<div class="row">
 		<div class="span8">
 			<div class="body-content">
-<div class="section"> 
- <div class="page-header">
-  <h2 id="Project_Plugin_Management">Project Plugin Management</h2>
- </div> 
- <a name="Project_Plugin_Management"></a> 
- <table border="0" class="bodyTable table table-striped table-hover"> 
-  <thead> 
-   <tr class="a"> 
-    <th>GroupId</th> 
-    <th>ArtifactId</th> 
-    <th>Version</th> 
-   </tr> 
-  </thead> 
-  <tbody> 
-   <tr class="b"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-antrun-plugin/">maven-antrun-plugin</a></td> 
-    <td>1.3</td> 
-   </tr> 
-   <tr class="a"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-assembly-plugin/">maven-assembly-plugin</a></td> 
-    <td>2.2-beta-5</td> 
-   </tr> 
-   <tr class="b"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-dependency-plugin/">maven-dependency-plugin</a></td> 
-    <td>2.8</td> 
-   </tr> 
-   <tr class="a"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-release-plugin/">maven-release-plugin</a></td> 
-    <td>2.1</td> 
-   </tr> 
-  </tbody> 
- </table> 
-</div>
+<div class="page-header">
+ <h1 id="run_chameleon_as_system_service">Run Chameleon as system service</h1>
+</div> 
+<p>The page explains how to run a Chameleon instance as a system service. It shows the settings for CentOS but can easily be adapted to Unbuntu or other platforms.</p> 
+<h2 id="provision_the_chameleon_package">Provision the Chameleon package</h2> 
+<p>Create a directory where you will unpack all the file required by your chameleon instance:</p> 
+<pre><code>.
+|- bin\
+|- core\
+|- runtime\
+|- application\
+|- conf\
+\- chameleon.sh
+</code></pre> 
+<p>Don’t forget to add the execution permission to the <code>chameleon.sh</code> script.</p> 
+<p>The service will be executed by a specific user. This user must be able to read and write files in the chosen directory. More precisely, Chameleon needs to write in the <code>chameleon-cache</code> directory as well as in the <code>logs</code> directory. (These values are the default values and can be configured from the <code>conf/chameleon.properties</code> file).</p> 
+<h2 id="service_script">Service Script</h2> 
+<p>The script is placed in the <code>/etc/init.d</code> directory. In this example, the script is named <code>chameleon</code>, and is executed in by the <code>chameleon</code> user.</p> 
+<pre><code>#!/bin/bash
+# chkconfig: 345 20 80
+# description: Chameleon start/shutdown script
+# processname: chameleon
+#
+# Instalation:
+# copy file to /etc/init.d
+# chmod +x /etc/init.d/chameleon
+# chkconfig --add /etc/init.d/chameleon
+# chkconfig chameleon on
+#
+# Usage: (as root)
+# service chameleon start
+# service chameleon stop
+# service chameleon status
+#
+# You may want to temporarily remove the &gt;/dev/null for debugging purposes
+
+# Path to Chameleon application folder (to change)
+CHAMELEON_HOME=/home/chameleon/chameleon
+# Path to the JVM (to change)
+JAVA_HOME=/usr/java/latest/
+# User running the Chameleon process (to change)
+USER=chameleon
+
+CHAMELEON=${CHAMELEON_HOME}/chameleon.sh
+export JAVA_HOME
+
+# source function library
+. /etc/init.d/functions
+RETVAL=0
+
+start() {
+    echo -n &quot;Starting Chameleon service: &quot;
+    cd ${CHAMELEON_HOME}
+    # Add the other system variable in the following line
+    export JVM_ARGS=&quot;&quot;
+    su -s /bin/sh $USER -c &quot;${CHAMELEON} start &gt; /dev/null&quot;
+    RETVAL=$?
+
+    if [ $RETVAL -eq 0 ]; then
+        echo_success
+    else
+        echo_failure
+    fi
+    echo
+}
+
+stop() {
+    echo -n &quot;Shutting down Chameleon service: &quot;
+    cd ${CHAMELEON_HOME}
+    ${CHAMELEON} stop &gt; /dev/null
+
+    RETVAL=$?
+
+    if [ $RETVAL -eq 0 ]; then
+        echo_success
+    else
+        echo_failure
+    fi
+    echo
+}
+
+status() {
+    cd ${CHAMELEON_HOME}
+    ${CHAMELEON} status
+    RETVAL=$?
+
+    if [ $RETVAL -eq 0 ]; then
+        echo_success
+    else
+        echo_failure
+    fi
+    echo
+}
+
+clean() {
+    cd ${CHAMELEON_HOME}
+    ${CHAMELEON} clean-all
+    rm ${CHAMELEON_HOME}/RUNNING_PID
+}
+
+case &quot;$1&quot; in
+    start)
+        clean
+        start
+        ;;
+    stop)
+        stop
+        ;;
+    restart|reload)
+        stop
+        sleep 10
+        start
+        ;;
+    status)
+        status
+        ;;
+    clean)
+        clean
+        ;;
+    *)
+        echo &quot;Usage: $0 {start|stop|restart|status}&quot;
+esac
+
+exit 0
+</code></pre> 
+<p>Once done, execute the following commands, to start the created service when the machine boots.</p> 
+<pre><code>chmod +x /etc/init.d/chameleon
+chkconfig --add /etc/init.d/chameleon
+chkconfig chameleon on
+</code></pre> 
+<p>Once done, start the service using <code>/etc/init.d/chameleon</code> start. The service can be stopped using <code>/etc/init.d/chameleon/stop</code>.</p>
 			</div>
 		</div>
 		<div class="span4">
@@ -131,7 +225,13 @@
 				<div class="well">
 					<ul class="nav nav-list">
 						<li class="nav-header">Table of Contents</li>
-		<li><a href="#Project_Plugin_Management" title="Project Plugin Management">Project Plugin Management</a>
+		<li class="dropdown"><a href="#run_chameleon_as_system_service" title="Run Chameleon as system service">Run Chameleon as system service <b class="caret"></b></a>
+			<ul class="nav nav-list">
+		<li><a href="#provision_the_chameleon_package" title="Provision the Chameleon package">Provision the Chameleon package</a>
+		<li><a href="#service_script" title="Service Script">Service Script</a>
+				<li class="divider"></li>
+			</ul>
+		</li>
 					</ul>
 				</div>
 			</div>
@@ -205,8 +305,8 @@
 						<li>
 							<a href="chameleon-package.html" title="Package your Chameleon">Package your Chameleon </a>
 						</li>
-						<li>
-							<a href="chameleon-service.html" title="Run as service">Run as service </a>
+						<li class="active">
+							<a href="#" title="Run as service">Run as service </a>
 						</li>
 						<li>
 							<a href="apidocs/index.html" title="API">API </a>
