--- a/snapshot/contribution.html
+++ b/snapshot/contribution.html
@@ -8,7 +8,7 @@
 
 	<head>
 		<meta charset="UTF-8" />
-		<title>Project Plugin Management | OW2 Chameleon - Core</title>
+		<title>Contribute | OW2 Chameleon - Core</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
@@ -35,7 +35,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"/>
 	</head>
 
-	<body class="page-plugin-management project-chameleon-core" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
+	<body class="page-contribution project-chameleon-core" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
 
 		<div class="navbar navbar-fixed-top navbar-inverse">
 			<div class="navbar-inner">
@@ -62,10 +62,10 @@
 									<li><a href="apidocs/index.html" title="API">API </a></li>
 								</ul>
 							</li>
-							<li class="dropdown">
+							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Contribute <b class="caret"></b></a>
 								<ul class="dropdown-menu">
-									<li><a href="contribution.html" title="Contribute">Contribute </a></li>
+									<li class="active"><a href="" title="Contribute">Contribute </a></li>
 									<li><a href="source-repository.html" title="Sources">Sources </a></li>
 									<li><a href="http://github.com/ow2-chameleon/core/issues/" title="Issues" class="externalLink">Issues </a></li>
 									<li><a href="http://github.com/ow2-chameleon/core" title="Fork on GitHub" class="externalLink">Fork on GitHub </a></li>
@@ -87,43 +87,18 @@
 	<div class="row">
 		<div class="span8">
 			<div class="body-content">
-<div class="section"> 
- <div class="page-header">
-  <h2 id="Project_Plugin_Management">Project Plugin Management</h2>
- </div> 
- <a name="Project_Plugin_Management"></a> 
- <table border="0" class="bodyTable table table-striped table-hover"> 
-  <thead> 
-   <tr class="a"> 
-    <th>GroupId</th> 
-    <th>ArtifactId</th> 
-    <th>Version</th> 
-   </tr> 
-  </thead> 
-  <tbody> 
-   <tr class="b"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-antrun-plugin/">maven-antrun-plugin</a></td> 
-    <td>1.3</td> 
-   </tr> 
-   <tr class="a"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-assembly-plugin/">maven-assembly-plugin</a></td> 
-    <td>2.2-beta-5</td> 
-   </tr> 
-   <tr class="b"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-dependency-plugin/">maven-dependency-plugin</a></td> 
-    <td>2.8</td> 
-   </tr> 
-   <tr class="a"> 
-    <td>org.apache.maven.plugins</td> 
-    <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-release-plugin/">maven-release-plugin</a></td> 
-    <td>2.1</td> 
-   </tr> 
-  </tbody> 
- </table> 
-</div>
+<div class="page-header">
+ <h1 id="contribute">Contribute</h1>
+</div> 
+<p>The chameleon-core is an open-source project and all contributions are welcome to assist with its development and maintenance.</p> 
+<p>The Chameleon Core project is part of the OW2 Chameleon project, and is licensed under the Apache License 2.0.</p> 
+<h2 id="issues_bug_and_feature_tracker">Issues (bug and feature tracker)</h2> 
+<p>Please report any bugs found, feature requests or other issues on Chameleon Core GitHub tracker.</p> 
+<p>When creating a new issue, try following <a href="http://github.com/necolas/issue-guidelines/#readme">necolas’s guidelines</a>.</p> 
+<h2 id="fork_patch_and_contribute_code">Fork, patch and contribute code</h2> 
+<p>Feel free to fork the project repository at GitHub for your own use and updates. Contribute your fixes and new features back to the main codebase using GitHub pull requests.</p> 
+<h2 id="support">Support</h2> 
+<p>Support is done using the OW2 Chameleon mailing lists. Check the <a href="mail-lists.html">mailing list page</a>.</p>
 			</div>
 		</div>
 		<div class="span4">
@@ -131,7 +106,14 @@
 				<div class="well">
 					<ul class="nav nav-list">
 						<li class="nav-header">Table of Contents</li>
-		<li><a href="#Project_Plugin_Management" title="Project Plugin Management">Project Plugin Management</a>
+		<li class="dropdown"><a href="#contribute" title="Contribute">Contribute <b class="caret"></b></a>
+			<ul class="nav nav-list">
+		<li><a href="#issues_bug_and_feature_tracker" title="Issues (bug and feature tracker)">Issues (bug and feature tracker)</a>
+		<li><a href="#fork_patch_and_contribute_code" title="Fork, patch and contribute code">Fork, patch and contribute code</a>
+		<li><a href="#support" title="Support">Support</a>
+				<li class="divider"></li>
+			</ul>
+		</li>
 					</ul>
 				</div>
 			</div>
@@ -170,8 +152,8 @@
 				<div class="span3 bottom-nav">
 					<ul class="nav nav-list">
 						<li class="nav-header">Contribute</li>
-						<li>
-							<a href="contribution.html" title="Contribute">Contribute </a>
+						<li class="active">
+							<a href="#" title="Contribute">Contribute </a>
 						</li>
 						<li>
 							<a href="source-repository.html" title="Sources">Sources </a>
