--- a/snapshot/downloads.html
+++ b/snapshot/downloads.html
@@ -17,19 +17,19 @@
 		<link href="./css/bootstrap-responsive.min.css" rel="stylesheet" />
 		<link href="./css/docs.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
-		
+
 		<link href="http://yandex.st/highlightjs/7.3/styles/github.min.css" rel="stylesheet" />
-		
+
 		<link href="./css/lightbox.css" rel="stylesheet" />
-		
+
 		<link href="./css/site.css" rel="stylesheet" />
 		<link href="./css/print.css" rel="stylesheet" media="print" />
-		
+
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		
+
 <link rel="stylesheet" href="css/font-awesome.css"/>
 <link rel="stylesheet" href="css/orange.css" media="screen" type="text/css"/>
 <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
@@ -77,9 +77,9 @@
 				</div>
 			</div>
 		</div>
-		
+
 	<div class="container">
-	
+
 	<!-- Masthead
 	================================================== -->
 	</header>
@@ -91,33 +91,33 @@
 <div class="page-header">
  <h1>Downloads</h1>
 </div>
-<h2>Direct download</h2> 
-<div class="row"> 
- <div class="span6"> 
-  <div class="review"> 
-   <div class="reinfo"> 
-    <h4>Release</h4> 
-    <p><em>1.0.4-SNAPSHOT</em></p> 
-   </div> 
+<h2>Direct download</h2>
+<div class="row">
+ <div class="span6">
+  <div class="review">
+   <div class="reinfo">
+    <h4>Release</h4>
+    <p><em>1.0.4</em></p>
+   </div>
    <div class="button">
-    <a href="#" id="release_download"><i class="icon-download"></i> Download</a> 
-   </div> 
-  </div> 
- </div> 
- <div class="span6"> 
-  <div class="review"> 
-   <div class="reinfo"> 
-    <h4>Development</h4> 
-    <p><em>1.0.4-SNAPSHOT</em></p> 
-   </div> 
+    <a href="#" id="release_download"><i class="icon-download"></i> Download</a>
+   </div>
+  </div>
+ </div>
+ <div class="span6">
+  <div class="review">
+   <div class="reinfo">
+    <h4>Development</h4>
+    <p><em>1.0.5-SNAPSHOT</em></p>
+   </div>
    <div class="button">
     <a href="#" id="dev_download"><i class="icon-download"></i> Download</a>
-   </div> 
-  </div> 
- </div> 
+   </div>
+  </div>
+ </div>
 </div>
 <h2>Maven</h2>
-<p>The chameleon-core released artifacts are available on Maven Central:</p> 
+<p>The chameleon-core released artifacts are available on Maven Central:</p>
 <pre><code>&lt;!-- The distribution --&gt;
 &lt;dependency&gt;
     &lt;groupId&gt;org.ow2.chameleon&lt;/groupId&gt;
@@ -132,7 +132,7 @@
     &lt;version&gt;1.0.4-SNAPSHOT&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>
-<p>Snapshots artifacts are available on the <code>ow2.snapshots</code> repository:</p> 
+<p>Snapshots artifacts are available on the <code>ow2.snapshots</code> repository:</p>
 <pre><code>&lt;repositories&gt;
     &lt;repository&gt;
         &lt;id&gt;ow2.snapshots&lt;/id&gt;
@@ -146,7 +146,7 @@
     &lt;/repository&gt;
 &lt;/repositories&gt;
 </code></pre>
-<p>The dependency coordinates are:</p> 
+<p>The dependency coordinates are:</p>
 <pre><code>&lt;dependency&gt;
     &lt;groupId&gt;org.ow2.chameleon&lt;/groupId&gt;
     &lt;artifactId&gt;chameleon-core&lt;/artifactId&gt;
@@ -158,17 +158,17 @@
     &lt;version&gt;1.0.4-SNAPSHOT&lt;/version&gt;
     &lt;type&gt;zip&lt;/type&gt;
 &lt;/dependency&gt;
-</code></pre> 
-<!-- SCRIPTS --> 
-<script src="js/jquery-2.0.3.min.js"></script> 
+</code></pre>
+<!-- SCRIPTS -->
+<script src="js/jquery-2.0.3.min.js"></script>
 <script>
     var root = "http://repository.ow2.org/nexus/service/local/artifact/maven/content";
     var repoDevName = "snapshots";
     var repoName = "releases";
     var groupId = "org.ow2.chameleon";
     var artifactId ="chameleon-core";
-    var devVersion = "LATEST"; // 1.0.4-SNAPSHOT
-    var releaseVersion = "1.0.4-SNAPSHOT"
+    var devVersion = "LATEST"; // 1.0.5-SNAPSHOT
+    var releaseVersion = "1.0.4"
     var packaging = "zip"
 
     $( document ).ready(function() {
@@ -189,7 +189,7 @@
 	</div>
 
 	</div><!-- /container -->
-	
+
 	<!-- Footer
 	================================================== -->
 	<footer class="well">
@@ -271,7 +271,7 @@
 			</div>
 		</div>
 	</footer>
-		
+
 	<div class="container subfooter">
 		<div class="row">
 			<div class="span12">
@@ -295,7 +295,7 @@
 			document.write(unescape("%3Cscript src='./js/jquery-1.8.3.min.js' type='text/javascript'%3E%3C/script%3E"));
 		}
 	</script>
-	
+
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/lightbox.js"></script>
 	<script src="./js/jquery.smooth-scroll.min.js"></script>
@@ -304,6 +304,6 @@
 	<script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
 
 	<script src="./js/reflow-skin.js"></script>
-	
+
 	</body>
 </html>
