--- a/snapshot/index.html
+++ b/snapshot/index.html
@@ -17,19 +17,19 @@
 		<link href="./css/bootstrap-responsive.min.css" rel="stylesheet" />
 		<link href="./css/docs.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
-		
+
 		<link href="http://yandex.st/highlightjs/7.3/styles/github.min.css" rel="stylesheet" />
-		
+
 		<link href="./css/lightbox.css" rel="stylesheet" />
-		
+
 		<link href="./css/site.css" rel="stylesheet" />
 		<link href="./css/print.css" rel="stylesheet" media="print" />
-		
+
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		
+
 <link rel="stylesheet" href="css/font-awesome.css"/>
 <link rel="stylesheet" href="css/orange.css" media="screen" type="text/css"/>
 <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
@@ -77,9 +77,9 @@
 				</div>
 			</div>
 		</div>
-		
+
 	<div class="container">
-	
+
 	<!-- Masthead
 	================================================== -->
 	</header>
@@ -101,7 +101,7 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
         <div class="review">
             <div class="reinfo">
                 <h4>Release</h4>
-                <p><em>1.0.4-SNAPSHOT</em></p>
+                <p><em>1.0.4</em></p>
             </div>
             <div class="button"><a href="#" id="release_download"><i class="icon-download"></i> Download</a> </div>
         </div>
@@ -110,7 +110,7 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
         <div class="review">
             <div class="reinfo">
                 <h4>Development</h4>
-                <p><em>1.0.4-SNAPSHOT</em></p>
+                <p><em>1.0.5-SNAPSHOT</em></p>
             </div>
             <div class="button"><a href="#" id="dev_download"><i class="icon-download"></i> Download</a></div>
         </div>
@@ -124,8 +124,8 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
     var repoName = "releases";
     var groupId = "org.ow2.chameleon";
     var artifactId ="chameleon-core";
-    var devVersion = "LATEST"; // 1.0.4-SNAPSHOT
-    var releaseVersion = "1.0.4-SNAPSHOT"
+    var devVersion = "LATEST"; // 1.0.5-SNAPSHOT
+    var releaseVersion = "1.0.4
     var packaging = "zip"
 
     $( document ).ready(function() {
@@ -146,7 +146,7 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
 	</div>
 
 	</div><!-- /container -->
-	
+
 	<!-- Footer
 	================================================== -->
 	<footer class="well">
@@ -228,7 +228,7 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
 			</div>
 		</div>
 	</footer>
-		
+
 	<div class="container subfooter">
 		<div class="row">
 			<div class="span12">
@@ -252,7 +252,7 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
 			document.write(unescape("%3Cscript src='./js/jquery-1.8.3.min.js' type='text/javascript'%3E%3C/script%3E"));
 		}
 	</script>
-	
+
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/lightbox.js"></script>
 	<script src="./js/jquery.smooth-scroll.min.js"></script>
@@ -261,6 +261,6 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
 	<script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
 
 	<script src="./js/reflow-skin.js"></script>
-	
+
 	</body>
 </html>
