Fix typo (forgot a ")
Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>

--- a/snapshot/index.html
+++ b/snapshot/index.html
@@ -125,7 +125,7 @@ extensible, customizable and reproducible.</p><h2>Features</h2>
     var groupId = "org.ow2.chameleon";
     var artifactId ="chameleon-core";
     var devVersion = "LATEST"; // 1.0.5-SNAPSHOT
-    var releaseVersion = "1.0.4
+    var releaseVersion = "1.0.4"
     var packaging = "zip"
 
     $( document ).ready(function() {
